# gld-price-prediction-dl

./: .gitignore  AGENTS.md  ARCHITECTURE.md  GUIDE.md  MEJORAS.md  README.md  REFACTOR_PLAN.md  SUMMARY.md  USER_GUIDE.md  app.py  data_loader.py  evaluator.py  example.py  feature_engineering.py  models.py  pyproject.toml  requirements.txt  run.sh  test_streamlit.py  test_suite.py  trainer.py
.backups/pre-refactor/gldpred/: __init__.py
.backups/pre-refactor/tests/: conftest.py  test_diagnostics.py  test_evaluator.py  test_integration.py  test_portfolio.py  test_registry.py  test_trade_plan.py  test_trainer.py
scripts/: example.py
src/gldpred/: __init__.py  config.py
src/gldpred/app/: __init__.py  data_controller.py  glossary.py  i18n.py  state.py  streamlit_app.py  streamlit_app.py.bak.md
src/gldpred/config/: __init__.py  assets.py
src/gldpred/core/: __init__.py
src/gldpred/decision/: __init__.py  action_planner.py  engine.py  portfolio.py  scenario_analyzer.py
src/gldpred/diagnostics/: __init__.py  analyzer.py
src/gldpred/evaluation/: __init__.py  evaluator.py
src/gldpred/features/: __init__.py  engineering.py
src/gldpred/i18n/: __init__.py
src/gldpred/registry/: store.py  (+2 more)
tests/: conftest.py  test_assignments.py  test_backtest_engine.py  test_catalog.py  test_decision.py  test_decision_policy.py  test_diagnostics.py  test_evaluator.py  test_features.py  test_forecast_cache.py  test_health_service.py  test_integration.py  test_model_bundle.py  test_models.py  test_portfolio.py  test_registry.py  test_suite.py  test_trade_log.py  test_trainer.py
(+65 files in other folders)
