[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gldpred"
version = "1.0.0"
description = "Deep learning application for forecasting GLD (Gold ETF) price movements"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "yfinance>=0.2.0",
    "scikit-learn>=1.3.0",
    "streamlit>=1.30.0",
    "matplotlib>=3.7.0",
    "plotly>=5.18.0",
]

[tool.setuptools.packages.find]
where = ["src"]
