[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gldpred"
version = "3.0.0"
description = "Multi-asset price prediction with multi-step quantile trajectory forecasting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "yfinance>=0.2.0",
    "scikit-learn>=1.3.0",
    "streamlit>=1.30.0",
    "matplotlib>=3.7.0",
    "plotly>=5.18.0",
    "joblib>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
